Fix MvelTest which fails with mvel 2.1.0.CR1 or higher. (cherry picked from commit 79f36609c6fe028019ac1fbd6b41abfbd6420bf0)